attempt fixing icons move out of screen on smaller size

--- a/page1.css
+++ b/page1.css
@@ -1,8 +1,8 @@
 html, body {
     overflow-x: hidden;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+    width: 100vw;
+    height: 100vh;
+    margin: auto auto;
     background-color: white;
 }
 
@@ -17,6 +17,7 @@ html, body {
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
+    overflow-x: visible;
 }
 
 .head {
@@ -32,6 +33,7 @@ html, body {
     left: 30px;
     max-height: 40vh;
     max-width: 20vw;
+    margin: auto;
 }
 
 /* BUTTONS */
@@ -42,6 +44,7 @@ a:link, a:visited {
 }
 
 .topButtons {
+    margin: auto;
     display: inline;
     position: relative;
     left: 79vw;
